--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,5 +7,13 @@
     {
       "path": "./tsconfig.vitest.json"
     }
-  ]
+  ],
+  "compilerOptions": {
+    "target": "esnext",
+    "module": "esnext",
+    // использование более строгого вывода типов для свойств данных в `this`
+    "strict": true,
+    "jsx": "preserve",
+    "moduleResolution": "node"
+  }
 }
